POR/RefEdge/src/objects/Community_News__c.object
<CustomObject>
    <description>Customer Reference Community (Bound 12)</description>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>News_Body__c</fullName>
        <label>News Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_on_Home_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Home Page</label>
        <type>Checkbox</type>
    </fields>
    <label>Community News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Featured__c</columns>
        <columns>Show_on_Home_Page__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>News Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>